--- a/tut_py_2_0_operators.ipynb
+++ b/tut_py_2_0_operators.ipynb
@@ -5,19 +5,14 @@
    "metadata": {},
    "source": [
     "# Python Operators\n",
-    "# Arithmetic\n",
-    "# Comparison\n",
-    "# Assignment\n",
-    "# Logical\n",
-    "# Membership\n",
-    "# Identity"
+    "### TYPES:  Arithmetic,  Comparison, Assignment, Logical, Membership, Identity"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Arithmetic Operator +, - , *, /, //, %, **"
+    "### Arithmetic Operator +, - , *, /, //, %, **"
    ]
   },
   {
@@ -38,7 +33,7 @@
     "# First thing first: Python(unlike SQL) is CASE SENSITIVE  <- VERY IMPORTANT\n",
     "a = 3\n",
     "A = 5\n",
-    "print(a)\n",
+    "print(a) # python is case sensitive: var a and A are different \n",
     "print(A)\n",
     "\n",
     "# print() is not same as Print()"
@@ -59,10 +54,10 @@
    ],
    "source": [
     "#Addition\n",
-    "x=6\n",
-    "y=5\n",
-    "r=x+y\n",
-    "print(r)"
+    "x = 6\n",
+    "y = 5\n",
+    "res = x + y\n",
+    "print(res)"
    ]
   },
   {
@@ -79,7 +74,7 @@
     }
    ],
    "source": [
-    "#Addition\n",
+    "#or I can print addition like this\n",
     "x=6\n",
     "y=5\n",
     "print(x+y)"
@@ -100,10 +95,10 @@
    ],
    "source": [
     "#Subtraction\n",
-    "x=6\n",
-    "y=5\n",
-    "r=x-y\n",
-    "print(r)"
+    "x = 6\n",
+    "y = 5\n",
+    "res = x - y\n",
+    "print(res)"
    ]
   },
   {
@@ -121,10 +116,10 @@
    ],
    "source": [
     "#Multiplication\n",
-    "x=6\n",
-    "y=5\n",
-    "r=x*y\n",
-    "print(r)"
+    "x = 6\n",
+    "y = 5\n",
+    "res = x * y\n",
+    "print(res)"
    ]
   },
   {
@@ -142,10 +137,10 @@
    ],
    "source": [
     "#Normal Division (/) --> (Float div) \n",
-    "x=10\n",
-    "y=5\n",
-    "r=x/y\n",
-    "print(r)"
+    "x = 10\n",
+    "y = 5\n",
+    "res = x / y\n",
+    "print(res)"
    ]
   },
   {
@@ -165,7 +160,7 @@
     }
    ],
    "source": [
-    "type(r)"
+    "type(res)"
    ]
   },
   {
@@ -183,9 +178,9 @@
    ],
    "source": [
     "# Modulo Division (//) --> Floor Division --> without decimal values\n",
-    "x=10\n",
-    "y=5\n",
-    "res=x//y\n",
+    "x = 10\n",
+    "y = 5\n",
+    "res = x // y\n",
     "print(res)"
    ]
   },
@@ -204,9 +199,9 @@
    ],
    "source": [
     "# Modulo Division (//) --> Floor Division --> without decimal values\n",
-    "x=10\n",
-    "y=7\n",
-    "res=x//y\n",
+    "x = 10\n",
+    "y = 7\n",
+    "res = x // y\n",
     "print(res)"
    ]
   },
@@ -225,83 +220,62 @@
    ],
    "source": [
     "# Remainder Division (%)\n",
-    "x=10\n",
-    "y=7\n",
-    "res=x%y\n",
+    "x = 10\n",
+    "y = 7\n",
+    "res = x % y\n",
     "print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000\n"
+      "9\n"
      ]
     }
    ],
    "source": [
     "#Exponentiation (**)\n",
-    "res=x**y\n",
+    "x = 3\n",
+    "y = 2\n",
+    "res = x ** y\n",
     "print(res)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparison Operators <,<=,>,>=,==,!=\n",
+    "- always returns **boolean variable**: True or False"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18\n"
-     ]
-    }
-   ],
-   "source": [
-    "x=9\n",
-    "y=9\n",
-    "print(x+y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Comparison Operators <,<=,>,>=,==,!="
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Comparison"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
+      "True\n",
+      "<class 'bool'>\n"
      ]
     }
    ],
    "source": [
     "x = 16\n",
     "y = 15\n",
-    "b = x > y # this is a boolean type\n",
+    "res = x > y # this is a boolean type\n",
     "\n",
-    "print(b) "
+    "print(res) \n",
+    "print(type(res))"
    ]
   },
   {
@@ -495,7 +469,7 @@
    "source": [
     "x = \"a\"\n",
     "y = \"d\"\n",
-    "print(x > y) # lexicograph"
+    "print(x > y) # for strings it performs lexicograph a< b < c < d...."
    ]
   },
   {
@@ -580,27 +554,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignment Operator =,+=,*=,%="
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "31\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = 21\n",
-    "b = 10\n",
-    "c = a + b\n",
-    "print (c)"
+    "### Assignment Operator =, +=, -=, *=, %="
    ]
   },
   {
@@ -617,7 +571,18 @@
     }
    ],
    "source": [
-    "c += a  #--> c=c+a\n",
+    "# c could be salary\n",
+    "c += a  #--> c = c + a\n",
+    "print (c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c -= a  #--> c = c - a\n",
     "print (c)"
    ]
   },
@@ -635,7 +600,7 @@
     }
    ],
    "source": [
-    "c *= a #c=c*a\n",
+    "c *= a # c = c * a\n",
     "print (c)"
    ]
   },
@@ -656,7 +621,7 @@
     "c = 10\n",
     "a = 7\n",
     "\n",
-    "c %= a #c=c/a --> Remainder\n",
+    "c %= a # c = c % a --> Remainder\n",
     "print (c)"
    ]
   },
@@ -677,7 +642,7 @@
     "c=10\n",
     "a=4\n",
     "\n",
-    "c /=a # c=c/a\n",
+    "c /= a # c = c / a\n",
     "print(c)"
    ]
   },
@@ -685,54 +650,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Logical Operator and, or, not"
+    "### Logical Operator and, or, not\n",
+    "- returns boolean variable: True or False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 5\n",
-    "y = 6\n",
-    "b = x < 3 and x < 10\n",
-    "\n",
-    "print(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 5\n",
-    "y = 6 \n",
-    "b = x > 3 and x < 2\n",
-    "\n",
-    "print(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -744,9 +668,122 @@
     }
    ],
    "source": [
-    "x = 5\n",
-    "y = 6 \n",
-    "b = x < 3 or x < 10\n",
+    "# age is between 20 and 30\n",
+    "age = 25\n",
+    "\n",
+    "res = age > 20 and age < 30\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 25 \n",
+    "income = 20000\n",
+    "res = age > 20 and income > 30000\n",
+    "# res = age > 20 and income < 2000\n",
+    "\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 5\n",
+    "\n",
+    "b = age < 30 or age > 60 # determine if age is out range [30 to 60]\n",
+    "\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extra charge if high consumption and either urban area or AC is used.\n",
+    "units_used = 520\n",
+    "area = 'urban'\n",
+    "has_air_conditioner = True\n",
+    "\n",
+    "b = units_used > 500 and (area == 'urban' or has_air_conditioner)\n",
+    "print(b)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# checks either if both subjects are >40 or total marks exceed 100.\n",
+    "math_marks = 38\n",
+    "science_marks = 65\n",
+    "\n",
+    "b = (math_marks > 40 and science_marks > 40) or (math_marks + science_marks > 100)\n",
+    "\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "salary = 30000\n",
+    "credit_score = 650\n",
+    "has_guarantor = True\n",
+    "\n",
+    "# The salary must be good and either credit score is high or a guarantor is available.\n",
+    "b = salary > 25000 and (credit_score > 700 or has_guarantor)\n",
     "\n",
     "print(b)"
    ]
@@ -778,87 +815,6 @@
     "  \n",
     "# Print not a is False \n",
     "print(not b) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "a=5\n",
-    "b=10\n",
-    "c=12\n",
-    "b = a<10 or (b>10 or c<10)\n",
-    "\n",
-    "print(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "x=5\n",
-    "y=10\n",
-    "z=12\n",
-    "\n",
-    "print(x<10 and (y>10 or z<10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Print' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [23]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mPrint\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHello\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Print' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "Print(\"Hello\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Hello\")"
    ]
   },
   {
@@ -1369,7 +1325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
