--- a/tut_py_2_type_part1_numeric_str_tuple_list.ipynb
+++ b/tut_py_2_type_part1_numeric_str_tuple_list.ipynb
@@ -76,8 +76,8 @@
     }
    ],
    "source": [
-    "a = 10\n",
-    "b = 3\n",
+    "a = 10 # apple\n",
+    "b = 3 \n",
     "\n",
     "res_add = a + b\n",
     "print(f\"addition:{res_add}\")   # Addition → 13\n",
@@ -85,7 +85,7 @@
     "res_sub = a - b\n",
     "print(f\"subtraction: {res_sub}\")   # Subtraction → 7\n",
     "\n",
-    "res_mult = a * b\n",
+    "res_mult = a * b # apple * price_of_apple\n",
     "print(f\"muptiplication:{res_mult}\")   # Multiplication → 30\n",
     "\n",
     "# I can perform calculation directly inside print method\n",
@@ -425,29 +425,29 @@
      "output_type": "stream",
      "text": [
       "[10, 20, 30, 40, 50]\n",
-      "<class 'list'>\n",
-      "[1, 2, 3]\n",
-      "['h', 'e', 'l', 'l', 'o']\n"
+      "<class 'list'>\n"
      ]
     }
    ],
    "source": [
     "# List declaration\n",
-    "numbers = [10, 20, 30, 40, 50]\n",
+    "age = [10, 20, 30, 40, 50] \n",
     "\n",
-    "print(numbers)\n",
-    "print(type(numbers))\n",
+    "print(age)\n",
+    "print(type(age))\n",
     "\n",
-    "my_numbers = list((1, 2, 3))  # Note: double parentheses!\n",
-    "print(my_numbers)\n",
     "\n",
-    "chars = list(\"hello\")  # ['h', 'e', 'l', 'l', 'o']\n",
-    "print(chars)"
+    "\n",
+    "# OPTIONAL\n",
+    "# my_numbers = list((1, 2, 3))  # Note: double parentheses!\n",
+    "# print(my_numbers)\n",
+    "# chars = list(\"hello\")  # ['h', 'e', 'l', 'l', 'o']\n",
+    "# print(chars)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "c6356123-cfb5-41e6-a7c0-8c99735a8c81",
    "metadata": {},
    "outputs": [
@@ -466,23 +466,23 @@
    ],
    "source": [
     "# what types of elements in list ?\n",
-    "my_list = [] # empty list\n",
-    "print(my_list)\n",
+    "l = [] # empty list\n",
+    "print(l)\n",
     "\n",
-    "my_list = [\"apple\", \"banana\",\"cucumber\"] \n",
-    "print(my_list)\n",
+    "l = [\"apple\", \"banana\",\"cucumber\"] \n",
+    "print(l)\n",
     "\n",
-    "my_list = [True, True, False]\n",
-    "print(my_list)\n",
+    "l = [True, True, False]\n",
+    "print(l)\n",
     "\n",
-    "my_list = [20, \"apple\"] # list of integers, strings\n",
-    "print(my_list)\n",
+    "l = [20, \"apple\"] # list of integers, strings\n",
+    "print(l)\n",
     "\n",
-    "my_list = [ [20, \"apple\"], [1, 3, 4] ] # list of list\n",
-    "print(my_list)\n",
+    "l = [ [20, \"apple\"], [1, 3, 4] ] # list of list\n",
+    "print(l)\n",
     "\n",
-    "fancy_list = [1, 3, '6', 3+7j, True, chars, [1,2,6], ]\n",
-    "print(fancy_list)"
+    "fancy_l = [1, 3, '6', 3+7j, True, chars, [1,2,6], ]\n",
+    "print(fancy_l)"
    ]
   },
   {
@@ -512,7 +512,7 @@
     }
    ],
    "source": [
-    "numbers = [10, 20, 30, 40, 50]\n",
+    "numbers = [10, 20, 30, 40, 50] # age, income, houses, size of plot,etc\n",
     "\n",
     "# Accessing elements\n",
     "print(numbers[0])   # prints 1st number in the list 10\n",
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "0d6b360a-36f8-4dc2-914c-3bc04993f3bf",
    "metadata": {},
    "outputs": [
@@ -705,16 +705,17 @@
      "output_type": "stream",
      "text": [
       "10\n",
-      "40\n",
-      "100\n",
-      "4\n",
-      "[10, 20, 30, 40]\n",
-      "25.0\n"
+      "70\n",
+      "220\n",
+      "6\n",
+      "[10, 20, 30, 40, 50, 70]\n",
+      "36.666666666666664\n"
      ]
     }
    ],
    "source": [
-    "numbers = [10, 20, 30, 40]\n",
+    "numbers = [70, 20, 10, 50, 30, 40]\n",
+    "\n",
     "print(min(numbers))\n",
     "print(max(numbers))\n",
     "print(sum(numbers))\n",
@@ -876,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b94893c4-0f8f-4090-acb2-a2cbb6aab3a0",
    "metadata": {},
    "outputs": [
@@ -891,7 +892,9 @@
       "('apple', 'banana', 'cherry')\n",
       "<class 'tuple'>\n",
       "('apple',)\n",
-      "<class 'tuple'>\n"
+      "<class 'tuple'>\n",
+      "apple\n",
+      "<class 'str'>\n"
      ]
     }
    ],
@@ -912,26 +915,10 @@
     "\n",
     "one_item_tpl = (\"apple\",) # mind the comma for it creates tuples\n",
     "print(one_item_tpl)\n",
-    "print(type(one_item_tpl))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "8f3891dd-1cc6-4779-a253-e54ce32da422",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "apple\n",
-      "<class 'str'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "tpl = (\"apple\")  # This is a string and not a tuple!\n",
+    "print(type(one_item_tpl))\n",
+    "\n",
+    "# NOTE: # This is a string and not a tuple!\n",
+    "tpl = (\"apple\")  \n",
     "print(tpl)\n",
     "print(type(tpl))\n"
    ]
@@ -944,24 +931,20 @@
    "outputs": [],
    "source": [
     "# number tuple\n",
-    "number_tuple = (10, 20, 25.75)\n",
-    "print(number_tuple)\n",
-    "# Output (10, 20, 25.75)\n",
+    "t = (10, 20, 25.75)\n",
+    "print(t)\n",
     "\n",
     "# string tuple\n",
-    "string_tuple = ('Jessa', 'Emma', 'Kelly')\n",
-    "print(string_tuple)\n",
-    "# Output ('Jessa', 'Emma', 'Kelly')\n",
+    "t = ('Jessa', 'Emma', 'Kelly')\n",
+    "print(t)\n",
     "\n",
     "# mixed type tuple\n",
-    "sample_tuple = ('Jessa', 30, 45.75, [25, 78])\n",
-    "print(sample_tuple)\n",
-    "# Output ('Jessa', 30, 45.75, [25, 78])\n",
+    "t = ('Jessa', 30, 45.75, [25, 78])\n",
+    "print(t)\n",
     "\n",
     "# create a tuple using tuple() constructor\n",
-    "sample_tuple2 = tuple(('Jessa', 30, 45.75, [23, 78]))\n",
-    "print(sample_tuple2)\n",
-    "# Output ('Jessa', 30, 45.75, [23, 78])"
+    "t = tuple(('Jessa', 30, 45.75, [23, 78]))\n",
+    "print(t)\n"
    ]
   },
   {
@@ -1017,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "0d3984eb-0f7a-4606-9443-f5d4ea3aee29",
    "metadata": {},
    "outputs": [
@@ -1030,10 +1013,10 @@
     }
    ],
    "source": [
-    "tuple1 = (10, 20, 30, 40, 50)\n",
+    "t = (10, 20, 30, 40, 50)\n",
     "\n",
     "# get index of item 30\n",
-    "position = tuple1.index(30)\n",
+    "position = t.index(30)\n",
     "print(position)"
    ]
   },
