--- a/tut_py_2_type_part2_dict_set.ipynb
+++ b/tut_py_2_type_part2_dict_set.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "id": "1dffc368-8dca-42c1-9920-125c751d2529",
    "metadata": {},
    "outputs": [
@@ -34,16 +34,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Alice': 85, 'Bob': 92, 'Charlie': 78}\n",
+      "{'Ram': 85, 'Carlos': 92, 'Roman': 78}\n",
       "<class 'dict'>\n"
      ]
     }
    ],
    "source": [
     "# creating dict: style1\n",
-    "student_scores = {\"Alice\": 85, \n",
-    "                  \"Bob\": 92, \n",
-    "                  \"Charlie\": 78\n",
+    "student_scores = {\"Ram\": 85, \n",
+    "                  \"Carlos\": 92, \n",
+    "                  \"Roman\": 78\n",
     "}\n",
     "\n",
     "print(student_scores)\n",
@@ -477,7 +477,7 @@
    "metadata": {},
    "source": [
     "# Advanced operations in dictionary\n",
-    "### 1️. Sorting a Dictionary by Keys and Values (SKIP)\n",
+    "### 1️. (SKIP) Sorting a Dictionary by Keys and Values\n",
     "Scenario: Sorting student scores in ascending and descending order."
    ]
   },
@@ -575,7 +575,11 @@
     }
    ],
    "source": [
-    "student_scores = {\"Alice\": 85, \"Bob\": 92, \"Charlie\": 78, \"David\": 88}\n",
+    "student_scores = {\"Alice\": 85,\n",
+    "                  \"Bob\": 92,\n",
+    "                  \"Charlie\": 78,\n",
+    "                  \"David\": 88\n",
+    "}\n",
     "\n",
     "filtered_scores = {k: v for k, v in student_scores.items() if v > 80}\n",
     "print(filtered_scores)"
@@ -827,7 +831,7 @@
    "id": "da5b1d96-55ff-4b3e-8f37-ad7d15510b86",
    "metadata": {},
    "source": [
-    "### 5️. Removing Duplicates from a List Using set\n",
+    "### 5️. Removing Duplicates from a List Using set (A good application of set)\n",
     "Scenario: Cleaning up duplicate email addresses."
    ]
   },
