--- a/tut_py_3_0_conditional_ifelse.ipynb
+++ b/tut_py_3_0_conditional_ifelse.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "5221b0b0-aea6-4cfc-9e5e-05f6f11cedc8",
    "metadata": {},
    "outputs": [
@@ -29,26 +29,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x is greater than 5\n",
-      "I am happy for x\n",
-      "are you happy for x?\n",
-      "I have exited the if condition\n"
+      "The student's score is above average.\n",
+      "That's a good result!\n",
+      "Lets celebrate\n",
+      "Moving on to the next evaluation...\n"
      ]
     }
    ],
    "source": [
-    "x = 10 # change x to 4\n",
-    "if x > 5:\n",
-    "    print(\"x is greater than 5\")\n",
-    "    print(\"I am happy for x\")\n",
-    "    print(\"are you happy for x?\")\n",
+    "# Example: Checking a student's score\n",
+    "score = 6  # change\n",
     "\n",
-    "print(\"I have moved past the if condition\")    \n"
+    "if score > 5:\n",
+    "    print(\"The student's score is above average.\")\n",
+    "    print(\"That's a good result!\")\n",
+    "    print(\"Lets celebrate\")\n",
+    "\n",
+    "print(\"Moving on to the next evaluation...\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "9cff667a-8710-48b3-9cd4-2fd3abbcea05",
    "metadata": {},
    "outputs": [
@@ -56,21 +58,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x is less than 5\n",
-      "I have moved past the if-else condition\n"
+      "The student's score is below average.\n",
+      "There might be room for improvement.\n",
+      "Moving on to the next evaluation...\n"
      ]
     }
    ],
    "source": [
-    "x = 2\n",
+    "# Example: Checking a student's score\n",
+    "score = 4  # previously 10\n",
     "\n",
-    "# if x is less than 5, print less that 5 , else print greater than\n",
-    "if x < 5:\n",
-    "    print(\"x is less than 5\")\n",
+    "if score > 5:\n",
+    "    print(\"The student's score is above average.\")\n",
+    "    print(\"That's a good result!\")\n",
+    "    print(\"Lets celebrate\")\n",
     "else:\n",
-    "    print(\"x is not less than 5\")\n",
+    "    print(\"The student's score is below average.\")\n",
+    "    print(\"There might be room for improvement.\")\n",
     "\n",
-    "print(\"I have moved past the if-else condition\")    \n"
+    "print(\"Moving on to the next evaluation...\")"
    ]
   },
   {
