--- a/tut_py_3_1_loop_for_listcomprehension_while_break_continue.ipynb
+++ b/tut_py_3_1_loop_for_listcomprehension_while_break_continue.ipynb
@@ -252,8 +252,8 @@
    "source": [
     "#prints in new line\n",
     "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
-    "for f in fruits:\n",
-    "    print(f)"
+    "for e in fruits:\n",
+    "    print(e)"
    ]
   },
   {
@@ -273,13 +273,13 @@
    "source": [
     "# prints in 1 line\n",
     "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
-    "for f in fruits:\n",
-    "    print(f, end = \" \")"
+    "for e in fruits:\n",
+    "    print(e, end = \" \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ded904d5-8a83-417b-94cf-8dfc78a6a107",
    "metadata": {},
    "outputs": [
@@ -295,8 +295,8 @@
    ],
    "source": [
     "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
-    "for f in fruits:\n",
-    "    print(f\"I love {f}\")"
+    "for e in fruits:\n",
+    "    print(f\"I love {e}\")"
    ]
   },
   {
@@ -326,8 +326,8 @@
    ],
    "source": [
     "# I want to see the data type of all elements in a list\n",
-    "assorted_list = [4, 5.98, True, \"ad astra\", ]\n",
-    "for e in assorted_list:\n",
+    "l = [4, 5.98, True, \"ad astra\", ] # list with assorted element\n",
+    "for e in l:\n",
     "    print(type(e))"
    ]
   },
@@ -351,8 +351,8 @@
    ],
    "source": [
     "# I want to see the data type of all elements in a list\n",
-    "assorted_list = [4, 5.98, True, \"ad astra\", {'ash': 1234}, [2,4,7] ]\n",
-    "for e in assorted_list:\n",
+    "l = [4, 5.98, True, \"ad astra\", {'ash': 1234}, [2,4,7] ]\n",
+    "for e in l:\n",
     "    print(type(e))"
    ]
   },
@@ -377,8 +377,8 @@
    ],
    "source": [
     "# Now I want to print the element and its data type: \n",
-    "assorted_list = [1, True, \"ad astra\", {'ash': 1234}, [2,4,7] ]\n",
-    "for e in assorted_list:\n",
+    "stuff = [1, True, \"ad astra\", {'ash': 1234}, [2,4,7] ]\n",
+    "for e in stuff:\n",
     "    print(f\"Element is {e}. Data type is {type(e)}\")\n",
     "    \n",
     "print(\"######I am out of for loop############\")"
