--- a/tut_py_3_function_2_lambda_reduce_filter_map_any_all.ipynb
+++ b/tut_py_3_function_2_lambda_reduce_filter_map_any_all.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "0008ec2c-107a-44bd-be90-74d657e4b20a",
    "metadata": {},
    "outputs": [
@@ -24,6 +24,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "25\n",
       "25\n"
      ]
     }
@@ -32,31 +33,17 @@
     "def square(x):\n",
     "    return x * x\n",
     "\n",
-    "print(square(5))  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "19008a46-0fd1-4915-95c2-f088540bfda0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(square(5))\n",
+    "\n",
+    "\n",
+    "# REDO above using lambda\n",
     "square = lambda x: x * x\n",
     "print(square(5))  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "5608376c-1ff4-46a5-b0c2-e83766ba0512",
    "metadata": {},
    "outputs": [
@@ -64,6 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "7\n",
       "7\n"
      ]
     }
@@ -72,24 +60,9 @@
     "def add(a, b):\n",
     "    return a + b\n",
     "\n",
-    "print(add(3, 4))  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "b6aa12d6-5e2b-43ec-817f-89c169ca8208",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(add(3, 4)) \n",
+    "\n",
+    "# REDO above using lambda\n",
     "add = lambda a, b: a + b\n",
     "print(add(3, 4))  # Output: 7"
    ]
@@ -121,17 +94,25 @@
    "metadata": {},
    "source": [
     "## map\n",
-    "– Apply a Function to Each Item in a List"
+    "- map(some_function, some_list)\n",
+    "- Apply a Function to Each Item in a List"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "98a11ff1-8164-446c-84f1-6e80bb83b7a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<map object at 0x0000014B3F34EBC0>]\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
     "# The map() function applies a function to every item in an iterable (like a list).\n",
     "\n",
     "# Example: Convert a List of Temperatures from Celsius to Fahrenheit\n",
@@ -140,7 +121,7 @@
     "# Convert to Fahrenheit using map()\n",
     "temps_fahrenheit = list(map(lambda c: (c * 9/5) + 32, temps_celsius))\n",
     "\n",
-    "print(temps_fahrenheit)\n"
+    "print(temps_fahrenheit)"
    ]
   },
   {
@@ -148,8 +129,9 @@
    "id": "11e30d8f-0e9a-4ebd-93d7-fb926e4e3256",
    "metadata": {},
    "source": [
-    "## filter\n",
-    "– Select Items Based on a Condition"
+    "## (OPTIONAL) filter\n",
+    "- filter(some_function, some_list)\n",
+    "- Select Items Based on a Condition"
    ]
   },
   {
@@ -167,7 +149,6 @@
     }
    ],
    "source": [
-    "\n",
     "# The filter() function filters elements based on a condition (returns True).\n",
     "\n",
     "# Example: Filter Out Odd Numbers from a List\n",
@@ -176,7 +157,7 @@
     "# Keep only even numbers\n",
     "even_numbers = list(filter(lambda x: x % 2 == 0, numbers))\n",
     "\n",
-    "print(even_numbers)\n"
+    "print(even_numbers)"
    ]
   },
   {
@@ -184,18 +165,25 @@
    "id": "43742a81-001a-46ce-9a52-c93253a64dab",
    "metadata": {},
    "source": [
-    "## reduce\n",
+    "## (OPTIONAL) reduce\n",
     " – Perform a Cumulative Computation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9327b9ed-2f4e-4f78-9631-3db866df37b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
     "# The reduce() function (from functools) reduces a sequence to a single value.\n",
     "\n",
     "# Example: Find the Product of All Numbers in a List\n",
@@ -241,21 +229,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b81d283b-6021-4f8e-8afb-b0e0f6070c40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# The any() function checks if at least one element in an iterable is True.\n",
     "\n",
-    "# Example: Check if a List Contains Any Positive Numbers\n",
-    "numbers = [-3, -2, -1, 0, 5]\n",
+    "# Example: Check if a List Contains Any negative Numbers\n",
+    "num = [-3, -2, -1, 0, 5] # count of apples\n",
     "\n",
     "# Check if at least one number is positive\n",
-    "has_positive = any(x > 0 for x in numbers)\n",
+    "has_negative = any(x > 0 for x in num)\n",
     "\n",
-    "print(has_positive)\n"
+    "print(has_negative)"
    ]
   },
   {
@@ -284,7 +280,7 @@
    ],
    "source": [
     "nums = [1, 2, 3, 4]\n",
-    "print(all(nums))  # True → all elements are non-zero (truthy)\n"
+    "print(all(nums))  # True → all elements are non-zero (truthy)"
    ]
   },
   {
@@ -303,7 +299,7 @@
    ],
    "source": [
     "nums = [1, 0, 3, 4]\n",
-    "print(all(nums))  # False → 0 is falsy\n"
+    "print(all(nums))  # False → 0 is false"
    ]
   },
   {
@@ -323,7 +319,7 @@
    "source": [
     "ages = [22, 35, 30, 28]\n",
     "are_adults = all(age >= 18 for age in ages)\n",
-    "print(are_adults)  # True → all are 18 or older\n"
+    "print(are_adults)  # True → all are 18 or older"
    ]
   },
   {
@@ -351,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
