--- a/tut_py_2_type_part3_binary.ipynb
+++ b/tut_py_2_type_part3_binary.ipynb
@@ -57,11 +57,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d792ecb-5d1d-4b33-95f7-1bc1eb7d09d8",
+   "cell_type": "markdown",
+   "id": "747eb341-7274-48e0-89e9-936c64f78898",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### 2️. bytearray (Mutable Binary Data)\n",
     "Scenario: Modifying binary data (e.g., changing an image header)."
@@ -96,11 +94,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67ac5ea0-6fc2-487e-b6b6-ae96b6d8601c",
+   "cell_type": "markdown",
+   "id": "e061ffa3-d019-4be1-ba34-81a6bac9e324",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### 3️. memoryview (Efficient Memory Handling)\n",
     "Scenario: Viewing and slicing a binary buffer without copying data.\n",
@@ -148,15 +144,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "6c9428c8-69c8-4aec-a98e-5c1c9168be14",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF'\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'image.jpg'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mimage.jpg\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m      2\u001b[0m     binary_data \u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mread(\u001b[38;5;241m10\u001b[39m)  \u001b[38;5;66;03m# Read first 10 bytes\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(binary_data)  \n",
+      "File \u001b[1;32mc:\\Users\\hi\\Desktop\\projects\\python_projects\\tutorial\\tut_tensorflow\\.venv\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    322\u001b[0m     )\n\u001b[1;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'image.jpg'"
      ]
     }
    ],
@@ -169,11 +170,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a00a4846-d0df-4d96-a3d9-0fa44898ef70",
+   "cell_type": "markdown",
+   "id": "8950c477-cc99-47bc-bc64-b855dac1344e",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### 5️. Writing and Modifying a Binary File Using bytearray\n",
     "Scenario: Modifying a binary file (e.g., changing metadata)."
@@ -181,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "90fe8973-8c51-45be-ba2d-3ae52a8e5aa6",
    "metadata": {},
    "outputs": [],
@@ -201,19 +200,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "fa6071d1-dfa4-4e07-b3ad-6954442058e9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sample.bin: 01 02 03 04 05 06 07 08 09 0A\n",
-      "sample_modified.bin: FF 02 03 04 05 06 07 08 09 0A\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Function to read and print binary file as hex\n",
     "def print_binary_file(filename):\n",
