--- a/tut_py_3_0_conditional_ifelse.ipynb
+++ b/tut_py_3_0_conditional_ifelse.ipynb
@@ -255,12 +255,12 @@
     "    print(\"Invalid input. Please enter 'yes' or 'no'.\")\n",
     "\n",
     "#e.g.3\n",
-    "temperature = 95  # Temperature in Fahrenheit\n",
-    "if temperature > 90 or temperature < 32:  # Check if it's too hot or too cold\n",
-    "    print(\"Weather alert: Extreme temperature!\")\n",
+    "temp = 95\n",
+    "\n",
+    "if temp < 32 or temp > 90: # TODO\n",
+    "    print(\"Weather alert\")\n",
     "else:\n",
-    "    print(\"Temperature is within a normal range.\")\n",
-    "\n"
+    "    print(\"Weather normal\")\n"
    ]
   },
   {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2951acf7-88cf-4ffd-be4c-df5e3af16256",
    "metadata": {},
    "outputs": [
@@ -324,13 +324,14 @@
     "# if with 'and' and 'or'\n",
     "\n",
     "#e.g.1\n",
-    "gpa = 3.5\n",
-    "extracurriculars = 2  # Number of extracurricular activities\n",
+    "score = 30 \n",
+    "extracurr = 2\n",
     "\n",
-    "if (gpa >= 3.0 and extracurriculars >= 2) or gpa >= 3.8:  # Check if either condition is met\n",
-    "    print(\"You are eligible for the scholarship!\")\n",
+    "if (score > 50 and extracurr >= 2) or (score >= 80):\n",
+    "    print(\"U r eligible for the scolarship\")\n",
     "else:\n",
-    "    print(\"You are not eligible for the scholarship.\")\n",
+    "    print(\"U r not eligible for the scolarship\")\n",
+    "\n",
     "print(\"####################\")\n",
     "\n",
     "#e.g.2\n",
