--- a/tut_py_1_print.ipynb
+++ b/tut_py_1_print.ipynb
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f3adadc0-dc7c-4a7c-a9f4-98ab02e5ba90",
    "metadata": {
     "colab": {
@@ -357,7 +357,8 @@
     "age = 5 # an int variable\n",
     "wt = 4.3 # an float variable\n",
     "\n",
-    "print(f\"Hello. My name is {name}. My brothers name is {brother}. My age is {age}. My weight is {wt}\")"
+    "print(\"Hello. My name is {name}. My brother name is {brother}. My age is {age}. My weight is {wt}\")\n",
+    "print(f\"Hello. My name is {name}. My brother name is {brother}. My age is {age}. My weight is {wt}\") "
    ]
   },
   {
