--- a/tut_py_3_function_0_inbuilt-input-isinstance_etc_userDefined_practice.ipynb
+++ b/tut_py_3_function_0_inbuilt-input-isinstance_etc_userDefined_practice.ipynb
@@ -7,7 +7,7 @@
     "# FUNCTION: inbuilt and user-defined\n",
     "\n",
     "## in built function: input \n",
-    "- examples of in built fn: print, input, int, float, len, range, type, list, tuple, dict, isinstance, map, filter, any, etc\n",
+    "- examples of in built fn: print, input, int, float, len, range, type, isinstance, enumerate, list, tuple, dict, map, filter, any, etc\n",
     "- sorted"
    ]
   },
@@ -528,6 +528,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# enumerate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index: 1 | Item: ('Ram', 85)\n",
+      "Index: 2 | Item: ('Carlos', 92)\n",
+      "Index: 3 | Item: ('Roman', 78)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sequence = ['cherry', 'kiwi', 'banana']\n",
+    "# sequence = ('cherry', 'kiwi', 'banana')\n",
+    "# sequence = {'cherry', 'kiwi', 'banana', 'banana'}\n",
+    "# sequence = \"Hello you\"\n",
+    "student_scores = {\"Ram\": 85, \n",
+    "                  \"Carlos\": 92, \n",
+    "                  \"Roman\": 78\n",
+    "}\n",
+    "sequence = student_scores.items()\n",
+    "\n",
+    "for i,f in enumerate(sequence, start=1):\n",
+    "    print(f\"Index: {i} | Item: {f}\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -551,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -567,49 +604,18 @@
     "def greet():\n",
     "    \"\"\"This function prints a greeting message.\"\"\"\n",
     "    print(\"Hello, welcome to the Python class!\")\n",
+    "    print(\"You are going to enjoy this\") # TODO\n",
     "\n",
     "# Call the function\n",
+    "greet()\n",
+    "greet()\n",
+    "greet()\n",
     "greet()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, welcome to the Python class!\n",
-      "Today you will learn python\n",
-      "Today you will learn type casting\n",
-      "Hello, welcome to the Python class!\n",
-      "Today you will learn python\n",
-      "Today you will learn type casting\n",
-      "Hello, welcome to the Python class!\n",
-      "Today you will learn python\n",
-      "Today you will learn type casting\n"
-     ]
-    }
-   ],
-   "source": [
-    "def greet():\n",
-    "    \"\"\"This function prints a greeting message.\"\"\"\n",
-    "    print(\"Hello, welcome to the Python class!\")\n",
-    "    print(\"Today you will learn python\")\n",
-    "    print(\"Today you will learn type casting\")\n",
-    "\n",
-    "\n",
-    "# Call the function\n",
-    "greet()\n",
-    "greet()\n",
-    "greet()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +636,9 @@
     "    \n",
     "\n",
     "# Call the function with an argument\n",
-    "greet_person(\"Alice\")\n"
+    "greet_person(\"Rahim\")\n",
+    "print(\"..........Next greet\")\n",
+    "greet_person(\"Alice\") "
    ]
   },
   {
@@ -841,14 +849,16 @@
     "# 4. Function with Default Parameters\n",
     "\n",
     "#e.g.1\n",
-    "def add(a=0, b=0):\n",
-    "    res = a + b\n",
-    "    return res\n",
+    "def add(a=0, b=0): # a=0, b=0 are default values \n",
+    "    ans = a + b \n",
+    "    return ans\n",
     "\n",
-    "# ans = add()\n",
-    "ans = add(3)\n",
-    "# ans = add(3,4)\n",
-    "print(ans)\n"
+    "result = add()\n",
+    "# result = add(3)\n",
+    "# result = add(3,4)\n",
+    "\n",
+    "\n",
+    "print(result)\n"
    ]
   },
   {
@@ -878,7 +888,7 @@
     "\n",
     "# Calling the function\n",
     "print(f\"The 3 to the power of 2 is {power(3)}\")      # Uses default exponent 2\n",
-    "print(power(3, 4))   # Uses provided exponent 3\n",
+    "print(power(3, 4))   # Uses provided exponent 4\n",
     "print(power(5, 3))   \n",
     "print(power(125,125))\n",
     "\n",
