--- a/tut_py_3_function_2_lambda_reduce_filter_map_any_all.ipynb
+++ b/tut_py_3_function_2_lambda_reduce_filter_map_any_all.ipynb
@@ -95,7 +95,28 @@
    "source": [
     "## map\n",
     "- map(some_function, some_list)\n",
-    "- Apply a Function to Each Item in a List"
+    "- Apply a some_function to Each Item in a some_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a471a3f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The map() function applies a function to every item in an iterable (like a list).\n",
+    "\n",
+    "# Example: Convert a List of Temperatures from Celsius to Fahrenheit\n",
+    "temps_celsius = [0, 10, 20, 30, 40]\n",
+    "\n",
+    "def to_faren(c):\n",
+    "    return (c * 9/5) + 32\n",
+    "\n",
+    "# Convert to Fahrenheit using map()\n",
+    "temps_fahrenheit = list(map(to_faren, temps_celsius))\n",
+    "\n",
+    "print(temps_fahrenheit)"
    ]
   },
   {
