--- a/tut_py_3_function_0_inbuilt-input-isinstance_etc_userDefined_practice.ipynb
+++ b/tut_py_3_function_0_inbuilt-input-isinstance_etc_userDefined_practice.ipynb
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,34 @@
     "sequence = student_scores.items()\n",
     "\n",
     "for i,f in enumerate(sequence, start=1):\n",
-    "    print(f\"Index: {i} | Item: {f}\")\n"
+    "    print(f\"Index: {i} | Item: {f}\")\n",
+    "    \n",
+    "    \n",
+    "############APPLICATION1\n",
+    "# Filtering Elements Based on Index\n",
+    "data = [10, 25, 5, 30, 15, 40]\n",
+    "\n",
+    "for index, value in enumerate(data):\n",
+    "    if index % 2 == 0:  # Process only elements at even indices\n",
+    "        print(f\"At even index {index}: {value}\")\n",
+    "\n",
+    "\n",
+    "############APPLICATION2\n",
+    "# Finding the Index of a Specific Element\n",
+    "names = [\"Alice\", \"Bob\", \"Charlie\", \"David\", \"Eve\"]\n",
+    "search_name = \"Charlie\"\n",
+    "found_index = -1  # Initialize to a value indicating not found\n",
+    "\n",
+    "for index, name in enumerate(names):\n",
+    "    if name == search_name:\n",
+    "        found_index = index\n",
+    "        break  # Exit the loop once found\n",
+    "\n",
+    "if found_index != -1:\n",
+    "    print(f\"'{search_name}' found at index: {found_index}\")\n",
+    "else:\n",
+    "    print(f\"'{search_name}' not found in the list.\")\n",
+    "\n"
    ]
   },
   {
